--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,11 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+html, body, #app, #app>div{
+  height : 100%;
+  background: black;
+  
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,12 +26,104 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
   color: #61dafb;
 }
+.app h1{
+  color : white;
+  margin-top: 5vh;
+  margin-bottom:5vh;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+.app h1 span{
+  color : green;
+}
+.score span{
+  color : green;
+}
+.tab {
+  padding : 2%;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  margin: 20px;
+  color: white;
+  background-color: #2c2d2f;
+  margin-top: 10vh;
+  margin-left: 70vh;
+  width : 55vh;
+  height : 70vh;
+  border-radius: 25px;
+}
+.app .tab .sub-heading{
+  color : green;
+}
+.question {
+  margin: 20px;
+}
 
+.question button {
+  display: block;
+  width : 15vh;
+  height : 7vh;
+  margin: 10px auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color : rgb(75, 71, 71);
+  color : white;
+}
+.question button.selected {
+  background-color: green;
+  color: white;
+}
+
+.question button:hover{
+   background-color: rgb(9, 106, 9);
+   cursor: pointer;
+}
+.score {
+  font-size: 24px;
+  margin: 20px;
+}
+.navigation {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.navigation button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color : rgb(61, 58, 58);
+  color : white;
+}
+.navigation button:disabled{
+  background-color: rgb(106, 103, 103);
+}
+.navigation button:hover:enabled{
+  background-color: green;
+}
+.score {
+  font-size: 24px;
+  margin: 20px;
+}
+
+.score-chart {
+  max-width: 400px;
+  margin: 20px auto;
+}
+.submit-button {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: green;
+  color : white;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
