--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,9 @@ html, body, #app, #app>div{
   color: white;
   
 }
-
+.app{
+  overflow-Y: hidden;
+}
 .App-link {
   color: #61dafb;
 }
@@ -49,14 +51,14 @@ html, body, #app, #app>div{
   padding : 2%;
   text-align: center;
   font-family: Arial, sans-serif;
-  margin: 20px;
   color: white;
   background-color: #2c2d2f;
-  margin-top: 10vh;
-  margin-left: 70vh;
+  margin: auto;
   width : 55vh;
-  height : 70vh;
+  height : 65vh;
+  padding-bottom: 5%;
   border-radius: 25px;
+  
 }
 .app .tab .sub-heading{
   color : green;
@@ -67,13 +69,20 @@ html, body, #app, #app>div{
 
 .question button {
   display: block;
-  width : 15vh;
-  height : 7vh;
+  width : 40%;
+  height : 40%;
   margin: 10px auto;
   padding: 10px 20px;
   font-size: 16px;
   background-color : rgb(75, 71, 71);
   color : white;
+  border-radius: 15px;
+  box-shadow: 2px 3px #5c8769;
+}
+.question button:active {
+  background-color:green;
+  transform: translateY(2px);
+  
 }
 .question button.selected {
   background-color: green;
@@ -81,9 +90,11 @@ html, body, #app, #app>div{
 }
 
 .question button:hover{
-   background-color: rgb(9, 106, 9);
+   background-color: rgb(4, 247, 61);
    cursor: pointer;
 }
+
+
 .score {
   font-size: 24px;
   margin: 20px;
@@ -123,6 +134,68 @@ html, body, #app, #app>div{
   font-size: 16px;
   background-color: green;
   color : white;
+}
+
+
+@media (max-width: 600px) {
+  .tab {
+    padding: 10px;
+   margin: auto;
+    width :40vh;
+  }
+  .app h1{
+    margin:auto;
+    margin-top: 5vh;
+    margin-bottom : 5vh
+  }
+  .question {
+    font-size: 1em;
+  }
+
+  .question button {
+    font-size: 0.9em;
+  }
+
+
+
+  button {
+    width: 40%;
+  }
+}
+
+/* For landscape */
+
+@media screen and (max-width: 950px) and  (orientation: landscape) {
+  
+    .tab {
+      padding: 10px;
+     margin: auto;
+      width :200vh;
+      height : 70vh;
+      
+    }
+    .question button{
+      height :10vh;
+      position: relative;
+      float: left;
+      width : 35%;
+    }
+    .app .sub-heading{
+      margin-top: 0vh;
+      margin-bottom: 0vh;
+    }
+    .navigation button {
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color : rgb(61, 58, 58);
+        color : white;
+        margin-top: 8vh;
+      
+      }
+    
+  p {
+    margin-left: 2em;
+  }
 }
 @keyframes App-logo-spin {
   from {
